# archibot

./: .dependency-age-allowlist  .dockerignore  .env.example  .gitignore  .grype.yaml  .pip-audit-known-vulnerabilities  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  SECURITY.md  autoresearch.checks.sh  autoresearch.sh  constraints.txt  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.graphify/: GRAPH_REPORT.md  graph.json  scope.json
app/: absurd_queue.py  actor_runner.py  api_data.py  chat.py  cli.py  config.py  config_writer.py  db.py  dramatiq_broker.py  event_worker.py  execution_lifecycle.py  indexer.py  job_events.py  main.py  mcp_server.py  models.py  prompt_store.py  telegram_handler.py  vector_store.py  worker.py
docker/: healthcheck.sh  supervisord.conf
docs/: README.md  archibot_shadcn_svelte_implementation_plan.md  architecture.md  cli.md  code-review-issues.md  configuration.md  deployment.md  frontend-admin-ui.md  implementation-plan-event-driven-archibot.md  implementation-plan-laravel-job-control.md  implementation-plan-security-architecture-hardening.md  installation.md  laravel-gui-parity.md  laravel-svelte-migration-plan.md  mcp.md  paperless-auth.md  phased-classify-judge-plan.md  pi-dev-subagent-orchestration.md  release-readiness-worker-jobs.md  webhooks.md  workflow.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.setup.ts
laravel/: .env.example  composer.json  package-lock.json  package.json  phpunit.xml  vite.config.ts  vitest.config.ts
prompts/: chat_system.txt  classify_judge_system.txt  classify_system.txt  ocr_correction_system.txt  ocr_vision_full_system.txt  ocr_vision_light_system.txt
scripts/: check_containment_boundaries.py  check_dependency_age.py  check_graphify_artifacts.py  check_markdown_links.py  check_pipeline_start_ownership.py  ci-local.sh  containment_boundary_inventory.json  event_driven_smoke.py  install-git-hooks.sh  pipeline_start_legacy_fingerprints.json
tests/: conftest.py  test_absurd_queue.py  test_absurd_queue_smoke.py  test_actor_execution.py  test_actor_runner.py  test_actor_runner_ocr.py  test_ai_provider.py  test_api_routes.py  test_chat.py  test_classifier.py  test_classifier_judge.py  test_cli_jobs.py  test_cli_poll_force.py  test_cli_process_doc.py  test_cli_reindex_ocr.py  test_cli_reset.py  test_cli_worker_contract.py  test_commands.py  (+55 more)
(+513 files in other folders)
