[project]
name = "archibot"
version = "0.1.0"
description = "AI-based classifier for Paperless-NGX inbox documents using Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0,<=0.136.1",
    "starlette>=0.49.1,<=1.0.0",
    "uvicorn[standard]>=0.31.1,<=0.46.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0,<=2.12.5",
    "pydantic-settings>=2.5.0,<=2.14.0",
    "python-multipart>=0.0.26,<=0.0.27",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0,<=25.5.0",
    "sqlite-vec>=0.1.3,<=0.1.9",
    "mcp[cli]>=1.20.0,<=1.27.0",
    "pymupdf>=1.24.0,<=1.27.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0,<=0.15.12",
    "pytest>=9.0.3,<=9.0.3",
    "pytest-asyncio>=1.3.0,<=1.3.0",
]

[project.scripts]
archibot = "app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
