[project]
name = "archibot"
version = "0.1.0"
description = "AI-based classifier for Paperless-NGX inbox documents using Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0,<=2.13.4",
    "pydantic-settings>=2.5.0,<=2.14.2",
    "apscheduler>=3.10.4",
    "absurd-sdk==0.4.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pgvector>=0.3.0,<1.0.0",
    "structlog>=24.4.0,<=25.5.0",
    "sqlite-vec>=0.1.3,<=0.1.9",
    "mcp[cli]>=1.20.0,<=1.28.1",
    "pymupdf>=1.24.0,<=1.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0,<=0.15.21",
    "pytest>=9.0.3,<=9.1.1",
    "pytest-asyncio>=1.3.0,<=1.4.0",
]

[project.scripts]
archibot = "app.cli:main"
archibot-events = "app.event_worker:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
